# recorder-gstareamer

./: CMakeLists.txt  test_gst.cpp
